--- a/iDoctor_vue/src/assets/css/main.css
+++ b/iDoctor_vue/src/assets/css/main.css
@@ -5,6 +5,7 @@
 #wrapper {
     background: url(../img/bg.jpg) no-repeat center;
     background-size: cover;
+    height: 100vh;
 }
 .menu-open {
     position: absolute;
@@ -15,4 +16,9 @@
 .menu-open i {
     font-size: 40pt;
     font-weight: bold;
+    color: #fff;
+}
+#map {
+    height: 100vh;
+    width: 100%;
 }
