--- a/iDoctor_vue/src/assets/css/main.css
+++ b/iDoctor_vue/src/assets/css/main.css
@@ -3,22 +3,19 @@
     padding: 0;
 }
 #wrapper {
-    background: url(../img/bg.jpg) no-repeat center;
-    background-size: cover;
-    height: 100vh;
+    padding: 2% 12%;
+}
+#map {
+    height: 500px;
 }
 .menu-open {
     position: absolute;
     top: 5px;
     right: 10px;
     cursor: pointer;
+    z-index: 9999;
 }
 .menu-open i {
-    font-size: 40pt;
+    font-size: 3em;
     font-weight: bold;
-    color: #fff;
-}
-#map {
-    height: 100vh;
-    width: 100%;
 }
