--- a/iDoctor_vue/src/assets/css/main.css
+++ b/iDoctor_vue/src/assets/css/main.css
@@ -13,7 +13,7 @@
     top: 5px;
     right: 10px;
     cursor: pointer;
-    z-index: 9999;
+    /* z-index: 9999; */
 }
 .menu-open i {
     font-size: 3em;
