--- a/iDoctor_vue/src/assets/css/main.css
+++ b/iDoctor_vue/src/assets/css/main.css
@@ -22,3 +22,9 @@
 .alert-error {
     color: red;
 }
+select {
+    display: block;
+    margin: 20px 0;
+    border: 2px solid;
+    outline: none;
+}
