--- a/iDoctor_vue/src/assets/css/main.css
+++ b/iDoctor_vue/src/assets/css/main.css
@@ -13,7 +13,6 @@
     top: 5px;
     right: 10px;
     cursor: pointer;
-    /* z-index: 9999; */
 }
 .menu-open i {
     font-size: 3em;
@@ -27,4 +26,7 @@ select {
     margin: 20px 0;
     border: 2px solid;
     outline: none;
+}
+.btn-card,hr {
+    margin-bottom: 20px;
 }
